Fix navigation on WebKit
The navigation was overflowing vertically and being hidden on larger
screen sizes because the grid container height was set to 100%. It
seems fluid units and grid do not mix well in WebKit.

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -98,7 +98,7 @@
   @include m-medium {
     .header {
       grid-template-columns: 1fr 2fr 1fr;
-      height: 100%;
+      height: unset;
     }
     .menu {
       display: none;
@@ -119,7 +119,7 @@
       position: unset;
     }
     .header.open-nav {
-      height: 100%;
+      height: unset;
       padding-bottom: unset;
     }
     .nav-list.open-nav {
